fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 html {
-  --scroll-behavior: smooth;
   scroll-behavior: smooth;
   font-family: 'scroll-behavior: smooth', /* user defined fonts */;
 }
@@ -9,12 +8,19 @@ body {
   /* padding-top: 70px; */
   /* -webkit-font-smoothing: antialiased; */
   font-size: 18px;
+  width: 100%;
+  position: relative
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 .help {
   width: 100%;
   height: 100vh;
 }
+
 
 .navbar {
   background-color: hsl(230, 1%, 98%);
@@ -358,17 +364,6 @@ a.college:hover {
   text-decoration: none;
 }
 
-.to-top {
-  display: none;
-  position: fixed;
-  bottom: 40px;
-  right: 20px;
-  width: 50px;
-  height: 50px;
-  border: none;
-  cursor: pointer;
-  transition: transform ease 0.5s;
-}
 
 .btn:focus,
 .btn:active {
@@ -580,31 +575,8 @@ a.college:hover {
   content: "";
   display: block;
   height: 1px;
-  width: 300px;
+  width: 40%;
   background-color: rgb(45, 57, 82);
-  position: relative;
-  margin-left: 20px;
-}
-
-.just-head-two.please {
-  font-family: "Karla", sans-serif;
-  font-weight: 900;
-  position: relative;
-  display: flex;
-  -webkit-box-align: center;
-  align-items: center;
-  /* width: 100%; */
-  white-space: nowrap;
-  font-size: 28px;
-  margin: 10px 0px 40px;
-}
-
-.just-head-two.please::after {
-  content: "";
-  display: block;
-  height: 1px;
-  /* width: 300px; */
-  background-color: hsl(220, 14%, 71%);
   position: relative;
   margin-left: 20px;
 }
